--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
