--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "core-js": "^3.6.5",
+    "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
