--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
     "core-js": "^3.6.5",
+    "dexie": "^3.0.3",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "register-service-worker": "^1.7.1",
