--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.3.2",
     "core-js": "^3.6.5",
     "dexie": "^3.0.3",
+    "dexie-export-import": "^1.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "register-service-worker": "^1.7.1",
