--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && copy dist\\index.html dist\\200.html",
-	"build:netlify": "vue-cli-service build",
+    "build:netlify": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "deploy": "vue-cli-service build && copy dist\\index.html dist\\200.html && surge dist --domain https://takuzu-vue.surge.sh"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
+    "@vueuse/core": "^4.11.0",
     "core-js": "^3.6.5",
     "dexie": "^3.0.3",
     "dexie-export-import": "^1.0.0",
