Test deploy script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build && copy dist\\index.html dist\\200.html",
     "build:netlify": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "deploy": "vue-cli-service build && copy dist\\index.html dist\\200.html && surge dist --domain https://takuzu-vue.surge.sh"
+    "deploy": "vue-cli-service build && copy dist\\index.html dist\\200.html && surge dist --domain https://takuzu-vue.surge.sh",
+    "deploy:test": "vue-cli-service build && copy dist\\index.html dist\\200.html && surge dist --domain https://takuzu-vue-test.surge.sh"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
