--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.3.2",
     "@vueuse/core": "^4.11.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.22.1",
     "dexie": "^3.0.3",
     "dexie-export-import": "^1.0.0",
     "lodash.debounce": "^4.0.8",
