--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@vueuse/core": "^4.11.0",
     "autoprefixer": "^10.3.1",
+    "chart.js": "^3.4.1",
     "core-js": "^3.8.3",
     "date-fns": "^2.22.1",
     "dexie": "^3.0.3",
