--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^4.11.0",
     "autoprefixer": "^10.3.1",
     "chart.js": "^3.4.1",
+    "chartjs-adapter-date-fns": "^2.0.0",
     "core-js": "^3.8.3",
     "date-fns": "^2.22.1",
     "dexie": "^3.0.3",
