--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dexie-export-import": "^1.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "oh-vue-icons": "^0.4.7",
     "postcss": "^8.3.5",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^2.2.4",
