--- a/package.json
+++ b/package.json
@@ -12,33 +12,36 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.3",
-    "@vueuse/core": "^4.11.0",
+    "@vueuse/core": "^4.11.2",
     "autoprefixer": "^10.3.1",
-    "chart.js": "^3.4.1",
+    "chart.js": "^3.5.0",
     "chartjs-adapter-date-fns": "^2.0.0",
     "core-js": "^3.8.3",
     "date-fns": "^2.22.1",
     "dexie": "^3.0.3",
-    "dexie-export-import": "^1.0.0",
+    "dexie-export-import": "^1.0.3",
+    "install": "^0.13.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "npm": "^7.20.5",
     "oh-vue-icons": "^0.4.7",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.6",
     "register-service-worker": "^1.7.2",
-    "tailwindcss": "^2.2.4",
-    "vue": "^3.0.4",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "tailwindcss": "^2.2.7",
+    "vue": "^3.2.2",
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0-beta.2",
-    "@vue/cli-plugin-pwa": "~5.0.0-beta.2",
-    "@vue/cli-plugin-router": "~5.0.0-beta.2",
-    "@vue/cli-plugin-unit-jest": "~5.0.0-beta.2",
-    "@vue/cli-plugin-vuex": "~5.0.0-beta.2",
-    "@vue/cli-service": "~5.0.0-beta.2",
-    "@vue/compiler-sfc": "^3.0.4",
-    "@vue/test-utils": "^2.0.0-0",
+    "@vue/cli-plugin-babel": "~5.0.0-beta.3",
+    "@vue/cli-plugin-pwa": "~5.0.0-beta.3",
+    "@vue/cli-plugin-router": "~5.0.0-beta.3",
+    "@vue/cli-plugin-unit-jest": "~5.0.0-beta.3",
+    "@vue/cli-plugin-vuex": "~5.0.0-beta.3",
+    "@vue/cli-service": "~5.0.0-beta.3",
+    "@vue/compiler-sfc": "^3.2.2",
+    "@vue/test-utils": "^2.0.0-rc.12",
+    "jest": "^26.6.3",
     "lodash.camelcase": "^4.3.0",
     "lodash.upperfirst": "^4.3.1",
     "vue-jest": "^5.0.0-0"
