--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "unplugin-icons": "^0.13.0",
     "unplugin-vue-components": "^0.17.15",
     "vite": "^2.7.2",
+    "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-pwa": "^0.11.13"
   }
 }
