--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dexie-export-import": "^1.0.3",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "pinia": "^2.0.11",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
