--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-NODE_ENV=production
-VITE_APP_TITLE=Takuzu
-
-VITE_APP_NAME=Takuzu
-VITE_APP_SHORT_NAME=Takuzu
+VITE_APP_TITLE="Takuzuuuuuuu"
+VITE_APP_NAME="Takuzu"
+VITE_APP_SHORT_NAME="Takuzu"
