--- a/.env.beta
+++ b/.env.beta
@@ -1,5 +1,5 @@
 NODE_ENV=production
+VITE_APP_TITLE="Takuzu [Beta]"
+VITE_APP_NAME="Takuzu [Beta Build]"
+VITE_APP_SHORT_NAME="Takuzu Beta"
 VITE_APP_TITLE=Takuzu [Beta]
-
-VITE_APP_NAME=Takuzu [Beta Build]
-VITE_APP_SHORT_NAME=Takuzu Beta
