--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,9 @@
 {
-  "recommendations": ["johnsoncodehk.volar"]
+  "recommendations": [
+      "johnsoncodehk.volar",
+      "wayou.vscode-todo-highlight"
+  ],
+  "unwantedRecommendations": [
+      "octref.vetur"
+  ]
 }
