--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fontsource/hammersmith-one": "^4.5.1",
     "@fontsource/roboto": "^4.5.3",
+    "@vueform/slider": "^2.0.9",
     "@vueuse/core": "^8.3.1",
     "chart.js": "^3.7.0",
     "chartjs-adapter-date-fns": "^2.0.0",
@@ -28,7 +29,8 @@
     "lodash.throttle": "^4.1.1",
     "pinia": "^2.0.11",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue-slider-component": "^4.0.0-beta.4"
   },
   "devDependencies": {
     "@iconify/json": "^2.0.32",
