--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,16 @@ pnpm-debug.log*
 
 src_OLD_
 index_OLD_.html
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
