--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "scripts": {
     "serve": "vite",
     "dev": "vite",
-
     "dev:host": "vite --host",
-
     "build": " vite build",
     "build:alpha": "vite build --mode alpha",
     "build:beta": "vite build --mode beta",
-	
     "deploy": "vite build && surge dist --domain https://takuzu-vue.surge.sh",
     "deploy:test": "vite build --mode beta && surge dist --domain https://takuzu-vue-test.surge.sh",
     "deploy:test2": "vite build --mode alpha && surge dist --domain https://takuzu-vue-test2.surge.sh",
-
-	"preview": "vite preview --port 4173",
+    "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
-	"test": "run-s test:unit",
+    "test": "run-s test:unit",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --fix --ignore-path .gitignore",
+    "lint:src": "eslint src --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --fix --ignore-path .gitignore",
+    "lint:nofix": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore"
   },
   "dependencies": {
     "@fontsource/hammersmith-one": "^4.5.1",
@@ -40,14 +39,20 @@
   },
   "devDependencies": {
     "@iconify/json": "^2.1.59",
+    "@rushstack/eslint-patch": "^1.1.4",
     "@tailwindcss/forms": "^0.5.2",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^18.0.0",
     "@types/tailwindcss": "^3.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.18.0",
+    "eslint-plugin-vue": "^9.1.1",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
     "rollup-plugin-copy": "^3.4.0",
