--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,5 +1,6 @@
 {
 	"extends": "./tsconfig.app.json",
+	"include": ["env.d.ts", "components.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.vue", "tests/unit/**/*.js", "tests/unit/**/*.ts"],
 	"exclude": [],
 	"compilerOptions": {
 	  "composite": true,
