--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,27 +1,32 @@
 {
 	"extends": "@vue/tsconfig/tsconfig.web.json",
-	"include": ["env.d.ts", "components.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.vue"],
-	"exclude": ["src/**/__tests__/*"],
+	"include": [
+		"env.d.ts",
+		"components.d.ts",
+		"src/**/*.ts",
+		"src/**/*.js",
+		"src/**/*.vue"
+	],
+	"exclude": [
+		"src/**/__tests__/*"
+	],
 	"compilerOptions": {
-	  "composite": true,
-	  "baseUrl": ".",
-	  "paths": {
-		"@/*": ["./src/*"]
-	  },
-	  "allowJs": true,
-	  "types": [
-		"vite-plugin-pwa/client"
-	  ],
-	  "lib": [
-		"ES2016",
-		"ES2018.Intl",
-		"DOM",
-		"DOM.Iterable",
-		"ES2019.Array",
-		"ES2017.String",
-		"ES2020.String",
-		"ES2022.Array"
-	  ]
+		"composite": true,
+		"baseUrl": ".",
+		"paths": {
+			"@/*": [
+				"./src/*"
+			]
+		},
+		"allowJs": true,
+		"types": [
+			"vite-plugin-pwa/client",
+			"vitest/importMeta"
+		],
+		"lib": [
+			"DOM",
+			"DOM.Iterable",
+			"ESNext"
+		]
 	}
-  }
-  
+}
