--- a/package.json
+++ b/package.json
@@ -23,47 +23,49 @@
     "lint:nofix": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore"
   },
   "dependencies": {
-    "@fontsource/hammersmith-one": "^4.5.1",
-    "@fontsource/roboto": "^4.5.3",
-    "@vueform/multiselect": "^2.3.3",
-    "@vueuse/core": "^9.5.0",
-    "chart.js": "^3.9.1",
-    "chartjs-adapter-date-fns": "^2.0.0",
-    "date-fns": "^2.29.3",
-    "dexie": "^3.2.0",
-    "dexie-export-import": "^1.0.3",
+    "@fontsource/hammersmith-one": "^5.0.8",
+    "@fontsource/roboto": "^5.0.8",
+    "@vueform/multiselect": "^2.6.6",
+    "@vueuse/core": "^10.7.1",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.2.0",
+    "dexie": "^3.2.4",
+    "dexie-export-import": "^4.0.7",
     "lodash.debounce": "^4.0.8",
-    "pinia": "^2.0.24",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "vue-slider-component": "^4.0.0-beta.4"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.7",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.140",
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/jsdom": "^20.0.1",
-    "@types/node": "^18.11.9",
-    "@types/tailwindcss": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.2.3",
-    "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.27.0",
-    "eslint-plugin-vue": "^9.7.0",
-    "jsdom": "^20.0.2",
+    "@iconify/json": "^2.2.166",
+    "@rushstack/eslint-patch": "^1.6.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.10.7",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vitest/coverage-v8": "^1.1.3",
+    "@vitest/ui": "^1.1.3",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.3",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.19.2",
+    "jsdom": "^23.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup-plugin-copy": "^3.4.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "unplugin-icons": "^0.14.13",
-    "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.2.4",
-    "vite-plugin-pwa": "^0.13.3",
-    "vitest": "^0.25.2",
-    "vue-tsc": "^1.0.9"
+    "postcss": "^8.4.33",
+    "rollup-plugin-copy": "^3.5.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "~5.3.3",
+    "unplugin-icons": "^0.18.2",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.0.11",
+    "vite-plugin-pwa": "^0.17.4",
+    "vitest": "^1.1.3",
+    "vue-tsc": "^1.8.27"
   }
 }
