--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@vue/tsconfig/tsconfig.web.json",
+	"extends": "@vue/tsconfig/tsconfig.dom.json",
 	"include": [
 		"env.d.ts",
 		"components.d.ts",
@@ -8,25 +8,23 @@
 		"src/**/*.vue"
 	],
 	"exclude": [
-		"src/**/__tests__/*"
+		"src/**/__tests__/*", "src/**/*.spec.ts", "src/**/*.test.ts"
 	],
 	"compilerOptions": {
 		"composite": true,
-		"baseUrl": ".",
-		"paths": {
-			"@/*": [
-				"./src/*"
-			]
-		},
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 		"allowJs": true,
 		"types": [
 			"vite-plugin-pwa/client",
-			"vitest/importMeta"
+			"vitest/importMeta",
+			"unplugin-icons/types/vue"
 		],
 		"lib": [
 			"DOM",
-			"DOM.Iterable",
-			"ESNext"
-		]
+			"ES2023"
+		],
 	}
 }
