--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "takuzu",
   "version": "0.14.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "serve": "vite",
     "dev": "vite",
@@ -41,7 +42,7 @@
     "@iconify/json": "^2.2.166",
     "@rushstack/eslint-patch": "^1.6.1",
     "@tailwindcss/forms": "^0.5.7",
-    "@tsconfig/node18": "^18.2.2",
+    "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.10.7",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -58,13 +59,13 @@
     "jsdom": "^23.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.33",
-    "rollup-plugin-copy": "^3.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.3",
     "unplugin-icons": "^0.18.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-static-copy": "^1.0.0",
     "vitest": "^1.1.3",
     "vue-tsc": "^1.8.27"
   }
