--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
 	"extends": "@tsconfig/node20/tsconfig.json",
-	"include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*", "tailwind.config.*", "scripts/**/*.ts"],
+	"include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*", "tailwind.config.*"],
 	"compilerOptions": {
 	  "composite": true,
 	  "module": "ESNext",
