No-implicit-returns tsconfig + fixes

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,7 @@
 	],
 	"compilerOptions": {
 		"composite": true,
+		"noImplicitReturns": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
