Rework PuzzleGrid in Vue Setup and TS

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,7 @@
 	"compilerOptions": {
 		"composite": true,
 		"noImplicitReturns": true,
+		"checkJs": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
