--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@iconify/json": "^2.2.166",
     "@rushstack/eslint-patch": "^1.6.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/lodash.debounce": "^4.0.9",
