--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/jsdom": "^21.1.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.10.7",
+    "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-vue": "^5.0.2",
@@ -61,6 +62,7 @@
     "jsdom": "^23.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.33",
+    "seedrandom": "^3.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.3",
     "unplugin-icons": "^0.18.2",
