Update ConstraintSolver.findAmountOfSolutions, benchmarked best config

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
     "test": "run-s test:unit",
+    "bench": "vitest bench",
     "vitest": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
