--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@tsconfig/node20": "^20.1.2",
+    "@types/eslint": "^8.56.3",
     "@types/jsdom": "^21.1.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.10.7",
