--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@vueform/multiselect": "^2.6.6",
     "@vueuse/core": "^10.7.1",
+    "@vueuse/math": "^10.9.0",
     "chart.js": "^4.4.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^3.2.0",
