--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dexie-export-import": "^4.0.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.7",
+    "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
