Update tsconfig files from create-vue package

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,8 +2,12 @@
 	"extends": "@tsconfig/node20/tsconfig.json",
 	"include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*", "tailwind.config.*", "scripts/**/*"],
 	"compilerOptions": {
-	  "composite": true,
-	  "module": "ESNext",
-	  "types": ["node", "vitest/globals"],
+		"composite": true,
+		"noEmit": true,
+		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+	
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
+	  	"types": ["node", "vitest/globals"],
 	}
   }
