--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,22 +3,29 @@
 	"include": [
 		"env.d.ts",
 		"components.d.ts",
-		"src/**/*.ts",
-		"src/**/*.js",
-		"src/**/*.vue",
-		"scripts/**/*.ts"
+		"src/**/*",
+		"scripts/**/*.ts",
+		"tests/**/*"
 	],
 	"exclude": [
-		"src/**/__tests__/*", "src/**/*.spec.ts", "src/**/*.test.ts"
+		"src/**/__tests__/*",
+		"src/**/*.spec.ts",
+		"src/**/*.test.ts",
+		"tests/**/*.spec.ts",
+		"tests/**/*.test.ts",
+		"tests/**/*.benchmark.ts"
 	],
 	"compilerOptions": {
 		"composite": true,
+		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 		"noImplicitReturns": true,
 		"checkJs": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
+		"baseUrl": ".",
+		"paths": {
+			"@/*": [
+				"./src/*"
+			]
+		},
 		"allowJs": true,
 		"types": [
 			"vite-plugin-pwa/client",
