--- a/package.json
+++ b/package.json
@@ -6,22 +6,19 @@
   "scripts": {
     "serve": "vite",
     "dev": "vite",
-    "dev:host": "vite --host",
-    "build": " vite build",
+    "build": "vite build",
     "build:alpha": "vite build --mode alpha",
     "build:beta": "vite build --mode beta",
     "deploy": "vite build && surge dist --domain https://takuzu-vue.surge.sh",
     "deploy:test": "vite build --mode beta && surge dist --domain https://takuzu-vue-test.surge.sh",
     "deploy:test2": "vite build --mode alpha && surge dist --domain https://takuzu-vue-test2.surge.sh",
     "preview": "vite preview --port 4173",
+    "preview:watch": "run-s \"build:alpha -- --watch\" preview",
     "test:unit": "vitest --environment jsdom",
+    "test:bench": "vitest bench",
     "test": "run-s test:unit",
-    "bench": "vitest bench",
-    "vitest": "vitest",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --fix --ignore-path .gitignore",
-    "lint:src": "eslint src --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --fix --ignore-path .gitignore",
+    "type-check": "vue-tsc --project tsconfig.app.json --noEmit",
+    "lint": "eslint src --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore --fix",
     "lint:nofix": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore"
   },
   "dependencies": {
@@ -64,7 +61,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
     "jsdom": "^23.2.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.33",
     "seedrandom": "^3.0.5",
     "tailwindcss": "^3.4.1",
