--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,6 +17,8 @@
 	],
 	"compilerOptions": {
 		"composite": true,
+		"noEmit": true,
+		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 		"noImplicitReturns": true,
 		"checkJs": true,
 		"baseUrl": ".",
