--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -3,6 +3,7 @@
 	"exclude": [],
 	"compilerOptions": {
 	  "composite": true,
+	  "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
 	  "lib": ["ES2023"],
 	  "types": ["node", "jsdom", "vitest/globals"]
 	}
