Replace npm with pnpm

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "serve": "vite",
     "dev": "vite",
     "build": "vite build",
