Install VueDevtools Vite plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,6 @@
         "Game.difficulty.Hard",
         "Game.difficulty.Very Hard",
         "Game.difficulty.Extreme"
-    ]
+    ],
+    "npm.packageManager": "pnpm"
 }
