--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "vite": "^5.0.11",
     "vite-plugin-pwa": "^0.17.4",
     "vite-plugin-static-copy": "^1.0.0",
+    "vite-plugin-vue-devtools": "^7.0.27",
     "vitest": "^1.1.3",
     "vue-tsc": "^1.8.27"
   }
