--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vite-plugin-static-copy": "^1.0.0",
     "vite-plugin-vue-devtools": "^7.0.27",
     "vitest": "^1.1.3",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "workbox-window": "^7.0.0"
   }
 }
