--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^3.2.0",
     "dexie": "^3.2.4",
     "dexie-export-import": "^4.0.7",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.7",
     "vue-i18n": "^9.9.1",
