--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:unit": "vitest --environment jsdom",
     "test:bench": "vitest bench",
     "test": "run-s test:unit",
+    "coverage": "vitest --ui --environment jsdom --coverage",
     "type-check": "vue-tsc --project tsconfig.app.json --noEmit",
     "lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore --fix",
     "lint:src": "eslint src --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore --fix",
