--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@iconify/json": "^2.2.166",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
+    "@pinia/testing": "^0.1.3",
     "@rushstack/eslint-patch": "^1.6.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
