--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "type-check": "vue-tsc --project tsconfig.app.json --noEmit",
     "lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore --fix",
     "lint:src": "eslint src --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore --fix",
-    "lint:nofix": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore"
+    "lint:nofix": "eslint src --ext .vue,.js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --ignore-path .gitignore"
   },
   "dependencies": {
     "@fontsource/hammersmith-one": "^5.0.8",
@@ -62,7 +62,7 @@
     "@vue/test-utils": "^2.4.3",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.19.2",
     "jsdom": "^23.2.0",
     "npm-run-all2": "^6.1.2",
