--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,6 @@
     ],
     "i18n-ally.sortKeys": false,
     "npm.packageManager": "pnpm",
-    "i18n-ally.extract.autoDetect": true
+    "i18n-ally.extract.autoDetect": true,
+    "vue.format.template.initialIndent": false
 }
